syntax="proto3";
message Cashflow{
   double interest_amount = 1;
   double principal_amount = 2;
   int64 date = 3;
}
message Account{
string acid = 1;
string foracid = 2;
string bacid = 3;
double clr_bal_amt = 4;
double un_clr_bal_amt = 5;
string sol_id = 6;
string cust_id = 7;
string acct_ownership = 8;
string ledg_num = 9;
string drwng_power = 10;
string mode_of_oper_code = 11;
double lien_amt = 12;
string sanct_lim = 13;
string gl_sub_head_code = 14;
string schm_code = 15;
string schm_type = 16;
string crncy_code = 17;
string acct_crncy_code = 18;
string acct_cls_flg = 19;
string del_flg = 20;
int64 acct_opn_date = 21;
string entity_cre_flg = 22;
int64 acct_cls_date = 23;
int64 last_tran_date = 24;
string notional_rate_code = 25;
string emp_id = 26;
double notional_rate = 27;
string limit_b2kid = 28;
string adim1_gam = 29;
int64 adim2_gam = 30;
int64 adim3_gam = 31;
double int_rate = 32;
string bm_id = 33;
string spread = 34;
string reprice_freq = 35;
int64 last_reprice_dt = 36;
int64 next_reprice_dt = 37;
string code1 = 38;
string code2 = 39;
string code3 = 40;
string code4 = 41;
string adim1_gac = 42;
string adim2_gac = 43;
string adim3_gac = 44;
string cust_name = 45;
string cmg_pan_gir_num = 46;
string cmg_cust_const = 47;
string adim1_cmg = 48;
string adim2_cmg = 49;
string adim3_cmg = 50;
double out_bal_amt = 51;
string cust_grp_id = 52;
string ucif_cust_const = 53;
string exch_rt = 54;
string out_bal_amt_con = 55;
string segment_code = 56;
string nfs = 57;
double base_pcnt = 58;
double nrml_int_pcnt = 59;
double id_pref_pcnt = 60;
double cust_pref_pcnt = 61;
double min_int_pcnt = 62;
double max_int_pcnt = 63;
double final_int_rate = 64;
string int_tbl_code = 65;
string pegged_flg = 66;
string der_pegged_flg = 67;
string repricing_plan = 68;
string floating_type = 69;
int64 next_repricing_date = 70;
int64 final_next_repricing_date = 71;
string npa_classification = 72;
string cust_hlth_code = 73;
string cust_npa_class = 74;
string final_npa_class = 75;
string final_foracid_suffix = 76;
string final_foracid_prefix = 77;
double npa_amount = 78;
repeated Cashflow cashflows = 79;
}
